<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_medidas">

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.practicaexamen.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.practicaexamen.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_medidas"
        android:name="com.example.practicaexamen.ui.Medidas.Fragment_medidas"
        android:label="@string/menu_medidas"
        tools:layout="@layout/fragment_medidas" >
        <action
            android:id="@+id/action_nav_medidas_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
        <action
            android:id="@+id/action_nav_medidas_to_nav_masas"
            app:destination="@id/nav_masas" />
    </fragment>
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.practicaexamen.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_masas2"
            app:destination="@id/nav_masas" />
        <action
            android:id="@+id/action_nav_slideshow_to_nav_gallery2"
            app:destination="@id/nav_gallery" />
    </fragment>

    <fragment
        android:id="@+id/nav_masas"
        android:name="com.example.practicaexamen.ui.Masas.MasasFragment"
        android:label="@string/menu_masas"
        tools:layout="@layout/fragment_masas" />


</navigation>